[package]
name = "iota-caip"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/identity"

[dependencies]
iota-client = { git = "https://github.com/iotaledger/iota-rust-sdk.git", branch = "sdk-bindings", package = "iota-graphql-client", optional = true }
iota-types = { git = "https://github.com/iotaledger/iota-rust-sdk.git", branch = "sdk-bindings", package = "iota-sdk-types", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", default-features = false, features = [
  "sync",
], optional = true }

[features]
default = ["iota", "resolver"]
iota = []
serde = ["dep:serde"]
resolver = [
  "iota",
  "dep:iota-client",
  "dep:iota-types",
  "dep:tokio",
  "dep:serde_json"
]

[dev-dependencies]
anyhow = "1.0.98"
iota-caip = { path = ".", features = ["serde"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "sync"] }
