[package]
name = "iota-caip"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/identity"

[dependencies]
iota = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v1.6.1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", default-features = false, features = [
  "sync",
], optional = true }

[features]
default = ["iota", "resolver"]
iota = []
serde = ["dep:serde"]
resolver = [
  "iota",
  "dep:iota",
  "dep:tokio",
  "dep:serde_json"
]

[dev-dependencies]
anyhow = "1"
iota-caip = { path = ".", features = ["serde"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "sync"] }
